Bind most of the 'top level' functions

--- a/glue/clasp-common-lisp/src/Makefile
+++ b/glue/clasp-common-lisp/src/Makefile
@@ -11,10 +11,20 @@ endif
 
 all: libstimclasp.so
 
-libstimclasp.so: stim_clasp.cc stim_clbind.cc
+stim_clasp.o: stim_clasp.cc stim_clbind.h
 	clang++ -static -c -I../../../src -fPIC ${CFLAGS} stim_clasp.cc
+
+stim_clbind.o: stim_clbind.cc stim_clbind.h
 	clang++ -static -c -I../../../src -fPIC ${CFLAGS} stim_clbind.cc
+
+libstimclasp.so: stim_clasp.o stim_clbind.o
 	clang++ ${LIBFLAGS} -L../../../build/out -Wl,--whole-archive -lstim -Wl,--no-whole-archive -o libstimclasp.so stim_clasp.o stim_clbind.o ${LDFLAGS}
+
+run:
+	clasp --eval '(ql:quickload :stim)'
+
+run-quit:
+	time clasp --eval '(ql:quickload :stim)' --eval '(uiop:quit)'
 
 clean:
 	rm -f *.o *.so
