Add an enum translator and start exposing Stim v.1.13 Python API
We add a new enum translator that works in a dynamic setting - as far as we can
tell, CLBIND_TRANSLATE_SYMBOL_TO_ENUM isn't possible to use in this dynamic
setting.

We start to expose the API more systematically by taking the API reference
https://github.com/quantumlib/Stim/wiki/Stim-v1.13-API-Reference, and for each
function in the reference, declare one or more C++ functions that are to be
exposed by clbind.

This way, it is less likely that some functionality will be missed.

--- a/glue/clasp-common-lisp/src/Makefile
+++ b/glue/clasp-common-lisp/src/Makefile
@@ -13,14 +13,14 @@ objects = stim_clasp.o stim_clbind.o translators.o
 
 all: libstimclasp.so
 
-$(objects): %.o: %.cc
-	clang++ -static -c -I../../../src -fPIC ${CFLAGS} $^
+$(objects): %.o: %.cc stim_clbind.h
+	clang++ -static -c -I../../../src -fPIC ${CFLAGS} $<
 
 libstimclasp.so: ${objects}
 	clang++ ${LIBFLAGS} -L../../../build/out -Wl,--whole-archive -lstim -Wl,--no-whole-archive -o libstimclasp.so $^ ${LDFLAGS}
 
 run: libstimclasp.so
-	rlwrap clasp --eval '(ql:quickload :stim)' --eval '(in-package :stim)' 
+	rlwrap clasp --eval '(ql:quickload :stim)' --eval '(in-package :stim)'
 
 run-quit: libstimclasp.so
 	time rlwrap clasp --eval '(ql:quickload :stim)' --eval '(uiop:quit)'
