Expose more of circuit and provide a type translator
A translator <std::map<uint32_t, std::vector<double>>. Should think about how to
do this better and more generally.

--- a/glue/clasp-common-lisp/src/Makefile
+++ b/glue/clasp-common-lisp/src/Makefile
@@ -1,6 +1,8 @@
 CFLAGS=`pkg-config --cflags libclasp`
 LDFLAGS=`pkg-config --libs libclasp`
 
+MAKEFLAGS += -j8
+
 ifeq ($(UNAME_S),Darwin)
 	LIBEXT=dylib
 	LIBFLAGS=-dynamic
